force-app/main/default/objects/SPEN_CaseEmployee__c/SPEN_CaseEmployee__c.object-meta.xml
<CustomObject>
    <description>CRMD-6634</description>
    <label>Case Employee</label>
    <nameField>
        <displayFormat>CE-{0000000}</displayFormat>
        <label>Case Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>