force-app/main/default/objects/SPEN_CaseEmployee__c/fields/Employee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Full_Name__c</fullName>
    <formula>SPEN_Employee__r.SPEN_FirstName__c +&apos; &apos;+  SPEN_Employee__r.SPEN_LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Full Name</label>
    <type>Text</type>
</CustomField>