force-app/main/default/objects/SPEN_CaseEmployee__c/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <formula>SPEN_Employee__r.SPEN_EmployeeNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>