force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_Employee__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>SPEN_Employee__c</referenceTo>
    <relationshipName>SPEN_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>