force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_EmployeeEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployeeEmailAddress__c</fullName>
    <description>Employee Email Address</description>
    <formula>SPEN_Employee__r.SPEN_EmailAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Email Address</label>
    <type>Text</type>
</CustomField>