force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_EmployeeMobileNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployeeMobileNumber__c</fullName>
    <description>Employee Mobile Number</description>
    <formula>SPEN_Employee__r.SPEN_MobileNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Mobile Number</label>
    <type>Text</type>
</CustomField>