force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_EmployeePhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmployeePhoneNumber__c</fullName>
    <description>Employee Phone Number</description>
    <formula>SPEN_Employee__r.SPEN_PhoneNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Phone Number</label>
    <type>Text</type>
</CustomField>