force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_NoticeRequestor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NoticeRequestor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>applicable only for Streetworks</inlineHelpText>
    <label>Notice Requestor</label>
    <type>Checkbox</type>
</CustomField>