force-app/main/default/objects/SPEN_CaseEmployee__c/fields/SPEN_WorkRequestor__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkRequestor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPEN Originator</label>
    <type>Checkbox</type>
</CustomField>